<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 ZXing authors
 Copyright 2011 Robert Theis

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="app_name">OCR Test</string>
    <string name="title_activity_results">ResultsActivity</string>
	<string name="visualization_activity_title">VisualizationActivity</string>
	<string name="graph_activity_title">GraphActivity</string>
	<string name="recommender_activity_title">RecommenderActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="vis_page_title">Nutrition Facts</string>
    <string name = "comparison_result_image_desc">Dynamic Comparison Result Picture</string>
    <string name = "prev_button_label">Previous</string>
    <string name = "next_button_label">Next</string>
    <string name = "factoid_dialog_title">Did you know ?</string>

    
    <string name="calories">Calories</string>
    <string name="total_fat">Total Fat</string>
    <string name="carbs">Carbohydrates</string>
    <string name="serving_size">Servings</string>
    <string name="sodium">Sodium</string>
    <string name="cholesterol">Cholesterol</string>
    
    <string name="save_button">Save Label</string>
    <string name="comparison_button">Equivalent Foods…</string>
    <string name="title_activity_settings">% Daily Recommendations</string>
    
    
    <string name="list_title">Saved Labels</string>
    <string name="food_name">Name</string>
    <string name="food_type">Description (Optional)</string>
    <string name="cost">Cost (Optional)</string>
    <string name="ok">Done</string>
    <string name="cancel">Cancel</string>
</resources>
