<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" 
    android:paddingTop="5dip"
    android:stretchColumns="1">

    <TableRow
        android:id="@+id/title_row"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="3dip"
    	android:paddingTop="3dip">
        <TextView
            android:id="@+id/title"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:typeface="normal"
            android:layout_gravity="center"
            android:text="@string/vis_page_title" />

    </TableRow>
    
	<TableRow
        android:layout_height="0dip"
        android:layout_weight="4" 
        android:gravity="center"
        android:paddingTop="2dip"
        android:paddingBottom="2dip">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="340dip" 
            android:background="#000000"/>
    </TableRow>
    
    <TableRow 
        android:id="@+id/cal_vis_row"
        android:layout_height="0dip"
        android:layout_weight="65"
        android:paddingBottom="2dip"
    	android:orientation="horizontal">
        <ImageView
            android:id="@+id/cal_vis"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_gravity="left"
			android:tint="#A4A4A2"/>

        <ImageView
            android:id="@+id/ser_vis"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_gravity="left"
			android:tint="#A4A4A2"/>

    </TableRow>
    
    <TableRow 
        android:id="@+id/cal_text_row"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
    	android:paddingTop="10dip"
    	>
        <TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:layout_gravity="left"
			android:gravity="center_vertical"
			android:textColor="#000000"
			android:textSize="22sp"
            android:textStyle="bold"
            android:paddingLeft="40dip"
			android:text="@string/calories"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_gravity="right"
            android:gravity="center_vertical"
			android:textColor="#000000"
			android:textSize="22sp"
            android:textStyle="bold"
            android:paddingLeft="40dip"
            android:text="@string/serving_size" />
    </TableRow>
    
	<TableRow
        android:layout_height="0dip"
        android:layout_weight="2" 
        android:gravity="center"
        android:paddingTop="2dip"
        android:paddingBottom="2dip">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="340dip" 
            android:background="#000000"/>
    </TableRow>
    
    <TableRow 
        android:id="@+id/fat_text_row"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
    	android:paddingTop="10dip">
        <TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:layout_gravity="left"
			android:gravity="center_vertical"
			android:paddingLeft="40dip"
			android:textColor="#000000"
			android:textSize="18sp"
            android:textStyle="bold"
			android:text="@string/total_fat"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:paddingLeft="40dip"
            android:text="@string/carbs"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>
        
    <TableRow 
        android:id="@+id/fat_vis_row"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:paddingBottom="5dip"
    	android:paddingTop="5dip"
    	android:layout_marginBottom="15dip">

        <LinearLayout
            android:id="@+id/fat_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">
            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/fat_num"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="30"
                android:gravity="center"/>
            <ProgressBar 
                android:id="@+id/fat_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="120dip"
                android:layout_height="0dip"
                android:layout_weight="15"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/car_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">
            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/car_num"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="30"/>
            <ProgressBar 
                android:id="@+id/car_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="120dip"
                android:layout_height="0dip"
                android:layout_weight="15"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>

    </TableRow>
    
    <TableRow 
        android:id="@+id/chol_text_row"
        android:layout_height="wrap_content"
    	android:paddingBottom="10dip"
    	android:paddingTop="10dip">

        <TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:layout_gravity="left"
			android:gravity="center_vertical"
			android:paddingLeft="40dip"
			android:textColor="#000000"
			android:textSize="18sp"
            android:textStyle="bold"
			android:text="@string/cholesterol"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_gravity="right"
            android:gravity="center_vertical"
			android:paddingLeft="40dip"
			android:textColor="#000000"
			android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/sodium" />
    </TableRow>
    
    <TableRow 
        android:id="@+id/chol_vis_row"
        android:layout_height="0dip"
        android:layout_weight="20"
        android:paddingBottom="5dip"
    	android:paddingTop="5dip"
    	android:layout_marginBottom="15dip">
        <LinearLayout
            android:id="@+id/chol_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">
            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/chol_num"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="30"/>
            <ProgressBar 
                android:id="@+id/chol_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="120dip"
                android:layout_height="0dip"
                android:layout_weight="15"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sod_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">
            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/sod_num"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="30"/>
            <ProgressBar 
                android:id="@+id/sod_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="120dip"
                android:layout_height="0dip"
                android:layout_weight="15"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>
    </TableRow>
    
    <TableRow
        android:layout_height="0dip"
        android:layout_weight="2" 
        android:gravity="center"
        android:paddingTop="2dip"
        android:paddingBottom="2dip">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="340dip" 
            android:background="#000000"/>
    </TableRow>
    
    <TableRow
        android:layout_height="0dip"
        android:layout_weight="10" 
        android:gravity="center">
        <Button
            android:id="@+id/comparison_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comparison_button"
            />
    </TableRow>
        

</TableLayout>
