<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingTop="5dip"
    android:orientation="vertical" >
    
	<TextView
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="40sp"
        android:textColor="#000000"
        android:typeface="normal"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="0dip"
    	android:paddingTop="3dip"
        android:text="@string/vis_page_title" />
	<ImageView
        android:layout_height="8dip"
        android:layout_width="340dip" 
        android:layout_gravity="center"
        android:layout_marginTop="0dip"
	    android:layout_marginBottom="10dip"
        android:background="#000000"/>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="6dip"
	    android:layout_marginBottom="0dip"
	    android:layout_marginLeft="27dip"
	    android:layout_marginRight="30dip">
	    
	    <com.todddavies.components.progressbar.ProgressWheel
            android:id="@+id/cal_spinner"
            android:layout_width="150dp"
            android:layout_height="150dip"
            android:layout_gravity="left"
            ProgressWheel:barColor="#a93722"
            ProgressWheel:barLength="100dp"
            ProgressWheel:barWidth="24dp"
            ProgressWheel:rimColor="#e6e6e6"
            ProgressWheel:rimWidth="25dp"
            ProgressWheel:spinSpeed="3dp"
            ProgressWheel:textColor="#000000"
            ProgressWheel:textSize="24sp" />
	    <ImageView
            android:id="@+id/serving_size_vis"
            android:layout_marginLeft="18dip"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_gravity="right" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="0dip"
	    android:layout_marginBottom="6dip"
	    android:layout_marginLeft="19dip"
	    android:layout_marginRight="27dip"
    	android:orientation="horizontal">
	    <TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:layout_gravity="left"
			android:gravity="center_vertical|center_horizontal"
			android:textColor="#000000"
			android:textSize="25sp"
			android:id="@+id/cal_text"
			android:text="@string/calories"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_gravity="right"
            android:gravity="center_vertical|center_horizontal"
			android:textColor="#000000"
			android:textSize="25sp"
            android:textStyle="bold"
			android:id="@+id/ser_text"
            android:text="@string/serving_size" />
	    
	</LinearLayout>
	
	<ImageView
        android:layout_height="2dip"
        android:layout_width="340dip" 
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
	    android:layout_marginBottom="10dip"
        android:background="#000000"/>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="6dip"
	    android:layout_marginBottom="6dip"
	    android:layout_marginLeft="40dip"
	    android:layout_marginRight="10dip"
    	android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:layout_gravity="left"
			android:gravity="center_vertical"
			android:paddingLeft="0dip"
			android:textColor="#000000"
			android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/fat_text"
			android:text="@string/total_fat"/>

        <TextView
            android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:gravity="center_vertical"
			android:paddingLeft="0dip"
			android:textColor="#000000"
			android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/car_text"
            android:text="@string/carbs"/>
	    
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="60dip"
	    android:layout_marginTop="6dip"
	    android:layout_marginBottom="0dip"
	    android:layout_marginLeft="40dip"
	    android:layout_marginRight="10dip"
    	android:orientation="horizontal">
        
	    <LinearLayout
            android:id="@+id/fat_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/fat_num"
                android:layout_width="match_parent"
                android:layout_height="25dp" 
                android:layout_gravity="left"/>

            <ProgressBar 
                android:id="@+id/fat_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="140dip"
                android:layout_height="20dip"
                android:layout_gravity="left"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/car_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/car_num"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center" />

            <ProgressBar 
                android:id="@+id/car_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="140dip"
                android:layout_height="20dip"
                android:layout_gravity="left"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="0dip"
	    android:layout_marginBottom="6dip"
	    android:layout_marginLeft="40dip"
	    android:layout_marginRight="10dip"
    	android:orientation="horizontal">

		<TextView
		    android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:layout_gravity="left"
			android:gravity="center_vertical"
			android:paddingLeft="0dip"
			android:textColor="#000000"
			android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/cho_text"
		    android:text="@string/cholesterol"/>

        <TextView
            android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="50"
			android:gravity="center_vertical"
			android:paddingLeft="0dip"
			android:textColor="#000000"
			android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/sod_text"
            android:text="@string/sodium" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="60dip"
	    android:layout_marginTop="6dip"
	    android:layout_marginBottom="6dip"
	    android:layout_marginLeft="40dip"
	    android:layout_marginRight="10dip"
    	android:orientation="horizontal">
        
	    <LinearLayout
            android:id="@+id/chol_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/chol_num"
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <ProgressBar 
                android:id="@+id/chol_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="140dip"
                android:layout_height="20dip"
                android:layout_gravity="left"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/sod_vis"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <edu.sfsu.cs.orange.ocr.TextAnimationView
                android:id="@+id/sod_num"
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <ProgressBar 
                android:id="@+id/sod_pb"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="140dip"
                android:layout_height="20dip"
                android:layout_gravity="left"
                android:progressDrawable="@drawable/greenprogressbar"/>
        </LinearLayout>
	</LinearLayout>
	
	<ImageView
        android:layout_height="2dip"
        android:layout_width="340dip" 
        android:layout_gravity="center"
	    android:layout_marginBottom="5dip"
        android:background="#000000"/>
	
     <Button
        android:id="@+id/comparison_button"
        android:layout_gravity="center"
        android:layout_width="320dip"
        android:layout_height="fill_parent"
	    android:layout_marginBottom="10dip"
	    android:textColor="#000000"
	    android:background="#e6e6e6"
        android:text="@string/comparison_button" />
	
	
</LinearLayout>
